--- a/public/index.html
+++ b/public/index.html
@@ -14,96 +14,14 @@
     <script src="logger.js"></script>
 
     <script>
-        var logger = new ExceptionLogger;
+        // onerror logger.
+        ExceptionLogger.init({
+            success: function() { console.log(arguments); },
+            failure: function() { console.warn(arguments); }
+        });
 
-        var data = {
-            "info": "Unknown Exception."
-        };
-
-        var success = function(res, status, xhr) {
-            console.log(res, status, xhr);
-        };
-
-        var error = function(xhr, status, error) {
-            console.log(xhr, status, error)
-        };
-
-        var parameters = {
-            "url": "/add",
-            "type": "POST",
-            "data": data,
-            "success": success,
-            "error": error
-        };
-
-        var processDate = function(stamp) {
-            var date, year, month, day, hours, minutes, seconds;
-
-            date    = new Date(stamp);
-            year    = date.getFullYear();
-            month   = date.getMonth() + 1;
-            day     = date.getDate();
-            hours   = date.getHours();
-            minutes = date.getMinutes();
-            seconds = date.getSeconds();
-
-            return year + '-' + prefix(month) + '-' + prefix(day) + ' ' + prefix(hours) + ':' + prefix(minutes) + ':' + prefix(seconds);
-
-            function prefix(n) {
-                return n < 10 ? '0' + n : n;
-            }
-        };
-
-        window.addEventListener('error', errorHandler, false);
-
-        function errorHandler(e) {
-            var i, info, infoArray;
-
-            info = {
-                "type": e.type || "Unknown Type",
-                "filename": e.filename || "Unknown File",
-                "lineno": e.lineno || 0,
-                "message": e.message || "Unknown Error",
-                "timeStamp": processDate(e.timeStamp || new Date)
-            };
-
-            infoArray = [];
-            for (i in info) {
-                if (info.hasOwnProperty(i)) {
-                    infoArray.push(i + '=' + info[i]);
-                }
-            }
-
-
-            parameters.data.info = infoArray.join('&');
-
-            $.ajax(parameters);
-        }
-
-        var fakeURL = 'http://sohu.inc/#!/intro';
-
-        // Error type:
-        //new Error();
-
-        // EvalError
-        // RangeError
-        // ReferenceError
-        // SyntaxError
-        // TypeError
-        // URIError
-
-        // An error
-        // throw 'Absolutely an error!';
-
-        // Ajax error
-        // $(document).ajaxError(errorHandler);
-        // $.ajax(fakeURL);
-
-        // Undefined is not a function
-        undef();
-
-        (new Image).src = 'http://sohu.inc/#!/intro';
-
+        // An error!
+        throw '@!%$(*&^*$&#%^&';
     </script>
 </body>
 </html>
